crates/strider/tests/snapshots/v2__x64__calls__fib_recursive.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x4011e0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "5" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x4011e0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "10" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v14" [color="#888888", style=dashed];
  "v14" -> "10" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "15" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "15" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "20" -> "16" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "21" -> "16" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "21" [label="φ XMM1", shape=house, fillcolor="#163030"];
  "15" -> "21" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v23" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "10" -> "v23" [color="#888888", style=dashed];
  "v23" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "22" [label="init\nXMM1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="φ XMM0", shape=house, fillcolor="#163030"];
  "15" -> "20" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "24" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v25" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "10" -> "v25" [color="#888888", style=dashed];
  "v25" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "24" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="φ RDX", shape=house, fillcolor="#163030"];
  "15" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "9" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v26" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "10" -> "v26" [color="#888888", style=dashed];
  "v26" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "27" -> "18" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="φ R12", shape=house, fillcolor="#163030"];
  "15" -> "28" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "30" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "33" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v34" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "10" -> "v34" [color="#888888", style=dashed];
  "v34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "35" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v36" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v36" [color="#888888", style=dashed];
  "v36" -> "35" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "37" -> "29" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="arg[0] ← RDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="φ Mem", shape=house, fillcolor="#163030"];
  "15" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "39" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "40" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "42" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="init\nRBX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "41" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "43" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "43" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "40" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "45" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "47" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="init\nR12", shape=Mdiamond, fillcolor="#1a3a5c"];
  "46" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "43" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "45" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "49" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "51" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0xfffffffffffffffe:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "29" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "11" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "5" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "53" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x401207:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "43" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0xffffffffffffffe0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "55" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "55" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "55" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "38" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0xffffffffffffffff:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "6" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "39" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "58" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x4011fb:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "59" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "61" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "61" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "62" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "64" -> "63" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "64" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "65" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "62" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "68" -> "62" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "68" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "37" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "59" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "65" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
