crates/strider/tests/snapshots/v2__x64__calls__repeat_call_pair.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x4012a0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x4012a0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "11" -> "8" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "12" -> "8" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "13" -> "8" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "14" -> "8" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "15" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "8" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "v17" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v17" [color="#888888", style=dashed];
  "v17" -> "15" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "v18" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v18" [color="#888888", style=dashed];
  "v18" -> "15" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v19" [color="#888888", style=dashed];
  "v19" -> "15" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "16" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "20" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v17" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v23" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v23" [color="#888888", style=dashed];
  "v23" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "14" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "24" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v25" [label="Post Call\nRSI", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v25" [color="#888888", style=dashed];
  "v25" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "26" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v27" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v27" [color="#888888", style=dashed];
  "v27" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v29" [label="Post Call\nRDI", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v29" [color="#888888", style=dashed];
  "v29" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "24" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "1" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "9" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "9" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x4012c8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="arg[4] ← R8", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← RSI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← RDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "32" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v33" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v33" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x4012b9:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
